# GUI_CBIR_Search

./: .gitignore  README.md  all_project.pro
DSC_Plugin_Interface/: dscplugininterface.cpp  dscplugininterface.h
DSC_Plugins/: .gitignore
DSC_Plugins/DscPlugin_BFPCA/: CMakeLists.txt  DscPlugin_BFPCA.pro  libdscplugin_bfpca.cfg
DSC_Plugins/DscPlugin_BFPCA/include/: dscpluginbfpca.h  dscpluginbfpca_global.h  lib_fpcan.h  lib_fpcan_dsc.h  lib_helpers.h
DSC_Plugins/DscPlugin_BFPCA/src/: dscpluginbfpca.cpp  lib_fpcan.cpp  lib_fpcan_dsc.cpp  lib_helpers.cpp
DSC_Plugins/DscPlugin_CooMat/: CMakeLists.txt  DscPlugin_CooMat.pro  libdscplugin_coomatrix.cfg
DSC_Plugins/DscPlugin_CooMat/include/: dscplugincoomatrix.h  dscplugincoomatrix_global.h  lib_descriptor2sl.h
DSC_Plugins/DscPlugin_CooMat/src/: dscplugincoomatrix.cpp  lib_descriptor2sl.cpp
DSC_Plugins/DscPlugin_MeanCh/: .gitignore  CMakeLists.txt  DscPlugin_MeanCh.pro  libdscplugin_meanch.cfg  main.cpp
DSC_Plugins/DscPlugin_MeanCh/include/: dscplugin_meanch.h  dscplugin_meanch_global.h
DSC_Plugins/DscPlugin_MeanCh/src/: dscplugin_meanch.cpp
GUI_MVP_Search_v4/: CMakeLists.txt  GUI_MVP_Search_v4.pro  descriptorcalculator.cpp  descriptorcalculator.h  descriptorcalculatorphash.cpp  descriptorcalculatorphash.h  draglabel.cpp  draglabel.h  draglistview.cpp  draglistview.h  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model2.cpp  model2.h  sortedindex.cpp  sortedindex.h  workerthread.cpp  workerthread.h  workerthreadsorter.cpp  workerthreadsorter.h
GUI_MVP_Search_v4/include/: lib_utils.h  mvptree_mod.h
GUI_MVP_Search_v4/src/: lib_utils.cpp  mvptree_mod.cpp
